add change date feature

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-    @apply m-0 p-0;
-    @apply box-border;
+html,
+body {
+  @apply m-0 p-0;
+  @apply box-border;
 }
 
+.alert-slide-in {
+  transform: translateY(-100%);
+  opacity: 0;
+  transition: transform 0.5s ease-out, opacity 0.5s ease-out;
+}
+
+.alert-visible {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.alert-slide-out {
+  transform: translateY(-100%);
+  opacity: 0;
+  transition: transform 0.5s ease-in, opacity 0.5s ease-in;
+}
